# focusd

./: Cargo.toml  README.md  config.toml  setup_assets.sh
assets/: focusd.desktop
cli/: Cargo.toml
cli/src/: idle.rs  main.rs  x11.rs
core/: Cargo.toml
core/src/: config.rs  db.rs
focusd_installer/: install.sh
gui/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
gui/src/: App.tsx  main.rs  style.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui_old_iced/: Cargo.toml
gui_old_iced/src/: app.rs  chart.rs
src/: hyprland.rs  main.rs
