[package]
name = "focusd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"
colored = "2.0"
x11rb = "0.13"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
# Add this new dependency:
serde_json = "1.0"
