[package]
name = "focusd_dashboard"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
focusd_core = { path = "../../core" } # Path to your existing DB logic
chrono = "0.4"
